# easytasks

./: .env  Makefile  docker-compose.dev.yml
.github/workflows/: lint-server.yml  lint-test.yml
caddy/: Caddyfile  Caddyfile.dev
runner/: README.md  pyproject.toml
service/: Dockerfile  Dockerfile.dev  Makefile  README.md  pyproject.toml
service/alembic/: env.py
service/alembic/versions/: 4e0f86cd247f_user_model.py
service/src/: admin.py  main.py  settings.py
service/src/api/: auth.py  routers.py
service/src/api/v1/: users.py
service/src/db/: engine.py  generators.py  tasks.py
service/src/models/: __init__.py  user.py
service/src/users/: auth.py
service/tests/: conftest.py  test_admin.py
