[project]
name = "service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.11",
    "mypy>=1.15.0",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.10",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "awscli-local[ver1]>=0.22.0",
]
